--- a/src/pages/config.html
+++ b/src/pages/config.html
@@ -125,6 +125,9 @@
         <div class="form-group row col-4 offset-4 mt-2">
             <a href="/portmap" class="btn btn-light">Portmap configuration</a>
         </div>
+        <div class="form-group row col-4 offset-4 mt-2">
+            <a href="/temperature" class="btn btn-light">Temperature & Humidity</a>
+        </div>
         <a href="lock" class="btn btn-light col-4 offset-4 mt-2" style="display: %s" title="Lock interface">Lock
             interface</a>
 
